# airdo

./: Dockerfile  README.en-US.md  README.md  components.d.ts  docker-compose.yml  index.html  package-lock.json  package.json  push-main.ps1  vite.config.ts
.github/workflows/: build.yml  cache.yml
src/: App.vue  main.ts  style.css  vite-env.d.ts
src-api/: .gitignore  Cargo.toml  LICENSE  README-zh.md  README.md
src-api/config/: config-example.yml
src-api/migrations/: 20240424155200_init.sql
src-api/src/: main.rs
src-api/src/config/: app_config.rs  clash_config.rs  db.rs  mod.rs  route.rs  sing_box_config.rs  state.rs
src-api/src/controller/: mod.rs  proxy_controller.rs
src-api/src/mapper/: health_check_mapper.rs  mod.rs
src-api/src/service/: health_check_service.rs  mod.rs  proxy_service.rs  scheduler_service.rs  subscriptions_service.rs  version_service.rs
src-api/src/util/: base64_util.rs  command_util.rs  file_util.rs  http_util.rs  mod.rs
src/api/: apiResponse.ts  proxy.ts
src/assets/font/: fonts.css
src/pages/: HealthCheckResult.vue
